--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,6 +4,8 @@ body, html {
     background-color: #669965 ;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    min-height: 100vh;
 }
 
 :root {
@@ -41,6 +43,7 @@ main {
     background-color: var(--light-green);
     display: flex;
     justify-content: center;
+    flex: 1;
 }
 main table {
     border: var(--gold) 3px solid;
@@ -64,14 +67,13 @@ tfoot td {
 footer {
     background-color: var(--green);
     border-top: var(--gold) 3px solid;
-    position: absolute;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     bottom: 0;
-
-    margin-top: 160px;
+    height:120px;
     flex-flow: column nowrap;
+    line-height: 1px;
 }
