--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -28,6 +28,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
+    max-height: 110px;
 }
 header #logo {
     height: 65px;
@@ -111,7 +112,7 @@ input {
     height: 75px;
     border-top: var(--gold) 3px solid;
     border-bottom: var(--gold) 3px solid;
-    margin: 90px 0 20px 0;
+    margin: 110px 0 20px 0;
     text-align: center;
     background-color: var(--green);
     padding: 0;
@@ -123,6 +124,7 @@ h1, h2 {
         -2px 2px 0 black,
         2px -2px 0 black,
         -2px -2px 0 black;
+    font-weight: bolder;
 
 }
 h2 {
@@ -141,4 +143,12 @@ h2 {
     body,html{
         font-size: 14px;
     }
+}
+input, select, button, td {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+tr th {
+    font-weight: bolder;
 }
